hphp/hack/test/typecheck/func_ptr_in_constants/custom_function.php
<?hh // partial

function foo() {}

class A {
  public static $arr = foo();
}

abstract class B {
  const const_arr = foo();
}
